--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-streamlit
-requests
-fastapi
-uvicorn
-python-dotenv
-feedparser
-aiolimiter
-tenacity
-beautifulsoup4
-gtts
-groq
-pydantic
-anthropic
-mcp
-langchain-anthropic
-langchain-mcp-adapters
-langgraph
+streamlit==1.31.0
+requests==2.31.0
+fastapi==0.109.0
+uvicorn==0.27.0
+python-dotenv==1.0.0
+feedparser==6.0.10
+aiolimiter==1.1.0
+tenacity==8.2.3
+beautifulsoup4==4.12.3
+gtts==2.5.0
+groq==0.4.2
+pydantic==2.6.0
+anthropic==0.18.1
+mcp==0.9.0
+langchain-anthropic==0.1.0
+langchain-mcp-adapters==0.1.0
+langgraph==0.0.20
